# theproductwheel

./: .gitignore  README.md  UX Experiment.md  ai_content_factory_project_plan.md  ai_content_factory_schema.yaml  blog.html  generate_blog_post.py  pyproject.toml  requirements.txt  validate_content.py
_posts/: 2025-12-22-Top-7-Cozy-and-Stylish-Home-Kitchen-Gadgets-to-Gift-This-Winter.md  2025-12-23-Top-7-Cozy-Outdoor-Gear-Gifts-for-Winter-Adventures-in-2025.md
agents/: README.md  base.py  depth_expansion_agent.py  llm_client.py  title_optimization_agent.py  topic_agent.py
app_logging/: __init__.py  run_logger.py
content_factory/: compiler.py  generation.py
data/catalog/: master.json
lib/: affiliates_config_loader.py  env.py  markdown_normalizer.py  pick_image_enrichment.py  post_formats.py  post_manifest.py  product_catalog.py  product_type_summary.py  topic_overrides.py
lib/validation/: markdown_frontmatter.py  posts_validator.py  url_utils.py
logging/: run_logger.py
managed_site/: hydration.py
memory/: category_memory.json  category_memory.py
output/: posts_log.json
pipeline/: hero_self_heal.py  image_step.py  manual_post_writer.py
prompts/: topic_selection.txt
schemas/: __init__.py  base.py  brief.py  category.py  common.py  depth.py  product.py  title.py  topic.py
scripts/: hydrate_content_package.py  test_image_generation.py
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs
styles/: site_style.py
tests/: test_content_factory_generation.py  test_hero_self_heal.py  test_image_step.py
(+76 files in other folders)
