[tool.poetry]
name = "ai-affiliate-engine"
version = "0.1.0"
description = ""
authors = ["JP"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai = "^2.14.0"
pydantic = "^2.12.5"
python-dotenv = "^1.2.1"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
